# bam_stats

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bam_stats  bam_stats.cpp  bam_stats.h  bam_stats.py  from_cigar.cpp  from_cigar.h
scripts/: bam_stats.py
src/: bam_stats.cpp  from_cigar.cpp  from_cigar.h
